# file_organizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  extensions.c  hashmap_services.c  include.h
src/: config.c  hashmap_services.c  include.h  main.c
